samples/_failures_safe/1761410315_ff4e52_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_310ac4b2.c: In function ‘main’:
./samples/SAFE/__tmp_310ac4b2.c:152:24: error: missing terminating " character
  152 |                 printf("Error: Matrices must have same dimensions for
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_310ac4b2.c:152:17: error: expected expression at end of input
  152 |                 printf("Error: Matrices must have same dimensions for
      |                 ^~~~~~
./samples/SAFE/__tmp_310ac4b2.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_310ac4b2.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_310ac4b2.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_310ac4b2.c:152:17: error: expected declaration or statement at end of input
